--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="app_name">czervos-notes</string>
     <string name="action_settings">Settings</string>
+    <string name="counter_add">Add a Counter</string>
 
 </resources>
