--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">czervos-notes</string>
     <string name="action_settings">Settings</string>
     <string name="counter_add">Add a Counter</string>
+    <string name="title_activity_add_counter">AddCounterActivity</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
