--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="counter_add">Add a Counter</string>
     <string name="title_activity_add_counter">AddCounterActivity</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="enter_counter_name">Enter Counter Name</string>
+    <string name="enter_name">Enter name</string>
 
 </resources>
