Created stats activity files and created intent to switch from CounterListActivity to StatsActivity from the stats context menu button.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,5 +10,7 @@
     <string name="counter_sort">Sort Counters Descending</string>
     <string name="title_activity_rename_counter">RenameCounterActivity</string>
     <string name="counter_rename">Rename Counter</string>
+    <string name="title_activity_stats">StatsActivity</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
